# QuantFreedom

./: .flake8  .pre-commit-config.yaml  CODEBASE_REVIEW.md  CONTRIBUTING.md  DEPENDENCIES.md  EnsembleTradingEA Errors 1.2.txt  Errors 1.0.txt  Errors 1.1.txt  Errror.txt  FINAL_REVIEW_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  MT5 Test Results 1.0.txt  MT5 Test Results 1.1.txt  MT5 Test Results 1.2.utf8.txt  MT5 Test Results 1.3.txt  MT5 Test Results 1.3.utf8.txt  MultiAssetEA Errors 1.3.txt  MultiAssetEA Errors 1.4.txt  MultiAsset_EA_Pro2.0.mq5  PropFirm_EA.mq5  QFisher_ARMI_TickVolume.mq5  README.md  ReportOptimizer-850985.csv  TEST_ENVIRONMENT_NOTES.md  TRADING_FUNCTIONALITY_SUMMARY.md  ZORRO_TRADING_FX_ANALYSIS.md  check_braces.py  prop_firm_strategy.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
DataHistory/: Data
MultiAssetEA_Pro2.0/Core/: CEngine.mqh  CGlobalInputs.mqh  CMemoryMonitor.mqh  CSweepStatePersistence.mqh  CSymbolManager.mqh  SSymbolConfig.mqh
MultiAssetEA_Pro2.0/Execution/: CExecution.mqh
MultiAssetEA_Pro2.0/Indicators/: CIndicatorManager.mqh  QFisher_ARMI_TickVolume.mq5
MultiAssetEA_Pro2.0/Risk/: CPortfolioRisk.mqh  CRiskManager.mqh
MultiAssetEA_Pro2.0/Strategies/: CAsianBreakout.mqh  CStrategyBase.mqh  CVWAPReversion.mqh  CVolatilityMomentum.mqh
MultiAssetEA_Pro2.0/UI/: CDashboard.mqh
SCG_jMath_Pro3/: DEPLOYMENT.md
SCG_jMath_Pro3/mql5/Experts/: jMathFx_EA.mq5
SCG_jMath_Pro3/mql5/Include/Zmq/: Zmq.mqh
SCG_jMath_Pro3/python_engine/: data_handler.py  main.py  managers.py  retracement.py  scg_model.py  zmq_bridge.py
quantfreedom/base/: base.py
quantfreedom/data/: data_dl.py
quantfreedom/indicators/: talib_ind.py
quantfreedom/nb/: buy_funcs.py  execute_funcs.py  helper_funcs.py  position_funcs.py  sell_funcs.py  simulate.py
quantfreedom/plotting/: plotting_main.py
tests/: README.md  conftest.py  test_evaluators.py  test_integration.py
tests/test_nb/: __init__.py  test_buy_funcs.py  test_execute_funcs.py  test_helper_funcs.py  test_sell_funcs.py
