[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfreedom"
version = "0.0.03.post1"
description = "Python library for backtesting and analyzing trading strategies at scale"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "Apache 2.0 with Commons Clause"}
authors = [
    {name = "Quant Freedom", email = "QuantFreedom1022@gmail.com"}
]
keywords = ["trading", "backtesting", "cryptocurrency", "trading-strategies", "quantitative-finance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "ccxt>=2.0.0,<4.0.0",
    "dash>=2.0.0,<3.0.0",
    "dash-bootstrap-templates>=1.0.0,<2.0.0",
    "h5py>=3.0.0,<4.0.0",
    "ipywidgets>=8.0.0,<9.0.0",
    "jupyter-dash>=0.4.0,<1.0.0",
    "jupyterlab-widgets>=3.0.0,<4.0.0",
    "kaleido>=0.2.0,<1.0.0",
    "mypy-extensions>=0.4.0,<2.0.0",
    "notebook>=6.4.0,<8.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "numba>=0.56.0; python_version >= '3.10'",
    "numba>=0.53.1; python_version < '3.10'",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "polars>=0.15.0,<1.0.0",
    "pyarrow>=6.0.0,<15.0.0",
    "tables>=3.7.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=3.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "black>=22.0.0,<25.0.0",
    "flake8>=5.0.0,<8.0.0",
    "isort>=5.0.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
]
web = [
    "Markdown>=3.3.0,<4.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "black>=22.0.0,<25.0.0",
    "mkdocs>=1.4.0,<2.0.0",
    "mkdocs-autorefs>=0.4.0,<1.0.0",
    "mkdocs-gen-files>=0.4.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocs-material-extensions>=1.1.0,<2.0.0",
    "mkdocs-minify-plugin>=0.6.0,<1.0.0",
    "mkdocs-open-in-new-tab>=1.0.0,<2.0.0",
    "mkdocs-section-index>=0.3.0,<1.0.0",
    "mkdocs-video>=1.5.0,<2.0.0",
    "mkdocstrings>=0.20.0,<1.0.0",
    "mkdocstrings-python>=0.8.0,<2.0.0",
    "pymdown-extensions>=9.0.0,<11.0.0",
    "tabulate>=0.9.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/QuantFreedom1022/quantfreedom"
Documentation = "https://quantfreedom1022.github.io/QuantFreedom/"
Repository = "https://github.com/QuantFreedom1022/quantfreedom"
Issues = "https://github.com/QuantFreedom1022/quantfreedom/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=quantfreedom",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["quantfreedom"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
